--- a/github/workflows/update-readme.yml
+++ b/github/workflows/update-readme.yml
@@ -10,7 +10,6 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: payton-burr/waka-readme-stats@master
+      - uses: payton-burr/payton-burr@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
